2000-01-28  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* parse.y (evaluating_function_body): New global flag.
	* ov-usr-fcn.cc (octave_user_function::do_index_op):
	Protect and set it here.
	* parse.y (make_break_command, make_return_command): Check it here.

	* error.cc (warning_state): New global flag.
	(warning): Set it here.
	* lex.l (reset_parser): Clear it here.
	* parse.y (fold): Check it here.

2000-01-27  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* pt-walk.h (tree_walker::visit_do_until_command): New pure virtual.
	* pt-pr-code.cc (tree_print_code::visit_do_until_command):
	New function.
	* pt-loop.h (tree_do_until_command): New class.
	(tree_while_command::expr, tree_while_command::list):
	Now protected instead of private.
	* parse.y (make_do_until_command): New function.
	(loop_command): Recognize do-until statement.
	(DO, UNTIL): New tokens.

	* input.cc (match_sans_spaces): Require non-blank part of test
	string to match standard string exactly.

2000-01-26  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-stream.h (scanf_format_elt::char_class): New struct elt.
	Add arg to constructor.
	(scanf_format_elt::special_conversion): New enum.
	* oct-stream.cc (scanf_format_list::add_elt_to_list): New arg,
	char_class.  Pass it to scanf_format_elt constructor.
	(scanf_format_list::scanf_format_list): Create separate list
	elements for whitespace and literal conversions.
	(expand_char_class): New function.
	(scanf_format_list::finish_conversion): Extract character class
	(not including the delimiting brackets) and expand the list of
	characters.  Pass the result to add_elt_to_list.
	(scanf_format_list::all_character_conversions): Also accept '^',
	scanf_format_elt::literal_conversion, and
	scanf_format_elt::whitespace_conversion types too.
	(DO_WHITESPACE_CONVERSION, BEGIN_CHAR_CLASS_CONVERSION,
	BEGIN_C_CONVERSION, BEGIN_S_CONVERSION, DO_LITERAL_CONVERSION):
	New macros.
	(octave_base_stream::do_scanf, octave_base_stream::do_oscanf):